--- a/index.html
+++ b/index.html
@@ -138,6 +138,148 @@
     <script>
         // Sağlanan veriler ve yeni eklemelerle oluşturulan birleşik liste
         let data = [
+            // Orijinal isimlendirmeler:
+            // Volkan Adsay
+            // Ayse Ayhan
+            // Alp Usubutun
+            // I:H: Ozercan
+            // Sulen Sarioglu
+            // Merva SOLUK TEKKESIN
+            // Funda Yilmaz
+            // pelin bağcı
+            // Kemal Deniz
+            // Murat Alper
+            // Ozlem Erdem
+            // Ozlem Yapicier
+            // osman zekioglu
+            // enver vardar
+            // Buyukbabani Nesimi
+            // Bulent Celasun
+            // Leyla Memis
+            // FAHRI YILMAZ
+            // Metin Ciris
+            // Figen Barut
+            // Hacı Hasan Esen
+            // ŞAHSİNE TOLUNAY
+            // Aytekin Akyol
+            // Nevra Dursun
+            // CENK SOKMENSUER
+            // Emine Turkmen Samdanci
+            // Figen Ozturk
+            // Burak Bahadir
+            // Süheyla Uyar Bozkurt
+            // Banu Dogan Gun
+            // Sibel Yenidunya
+            // Gunes Guner
+            // banu lebe
+            // Tulay Canda
+            // Fatma Hüsniye Dilek
+            // Aylar Poyraz
+            // Nese Demirkan
+            // Demet Sengul
+            // Mustafa Kosem
+            // Cumhur İbrahim Başsorgun
+            // Metin Akbulut
+            // Burcu Tokozlu (Senguven)
+            // Nilüfer onak kandemir
+            // Mine Hekimgil
+            // Fulya OZ PUYAN
+            // Neşe Karadağ
+            // Olgun Kontaş
+            // DILEK YAVUZER
+            // Betül Gündoğdu
+            // TÜLİN YALTA
+            // mehtat unlu
+            // Kayhan Başak
+            // Yurdanur Sullu
+            // Mehmet YALDIZ
+            // Sergülen DERVİŞOĞLU
+            // GÖKHAN ARTAŞ
+            // ÖZGÜR İLHAN ÇELİK
+            // Prof.Dr.Recep Bedir
+            // Sare ŞİPAL
+            // Banu Yaman
+            // sirin baspinar
+            // Doç.Dr. Sıdıka Fındık
+            // Armagan Gunal
+            // Ersin Tuncer
+            // Eren Altun
+            // Nagihan Yalçın
+            // Ünsal Han
+            // nur buyukpinarbasili
+            // Prof.Dr.Filiz Özyilmaz
+            // ERDOGDU IH
+            // Mehmet Akif ÇİFTCİOĞLU
+            // Hasan GÖKÇE
+            // Ramazan Uçak
+            // Mustafa Kemal Çiftçi
+            // NESRİN UYGUN
+            // Mehmet Reşat Özercan
+            // Nuray Kepil
+            // Arzu AVCI
+            // Kadriye Yıldız
+            // irem onur
+            // CÜYAN DEMİRKESEN
+            // SAADET ALAN
+            // Fahriye KILINC
+            // Gülzade Karaman
+            // Yasemen Adalı Ruşen
+            // anil aysal
+            // Pınar Celepli
+            // gulname findik guvendi
+            // Pelin Yıldız
+            // emel çakır
+            // Servet Guresci
+            // Büşra Yaprak Bayrak
+            // SEVİNÇ ÇELİK ŞAHİN
+            // Serra kayaçetin
+            // mehmet alpaslan gönültaş
+            // Gülden Diniz
+            // FURUZAN DOGER
+            // Derya Demir
+            // elife sahan kımıloğlu
+            // Betül Öğüt
+            // Mustafa Emre Ercin
+            // aydin isisag
+            // Uguray Payam Hacisalihoglu
+            // Serhat Toprak
+            // AKGÜL Arici
+            // YETKİN AĞAÇKIRAN
+            // Remzi ARSLAN
+            // Onur Ceylan
+            // Meral UNER
+            // Davut Şahin
+            // saygın i
+            // Arzu YILDIRIM ÖZLÜK
+            // ahu senem demiröz
+            // Bedriye Nazli Erkencioglu
+            // Seda Gun
+            // Meryem İlkay Eren Karanis
+            // Mahir Tayfur
+            // Berrin Buyukeren Babaoglu
+            // leyla tekin
+            // Erdem Comut
+            // Eruyar AT
+            // Deniz Çavuşoğlu
+            // Bahattin Erdoğan
+            // meltem azatcam
+            // Gamze Erkılınç
+            // Murat Aydin Sav
+            // Olcay Kurtulan
+            // Havva Hande KESER ŞAHİN
+            // Şenay Erdoğan Durmuş
+            // Zeynep Sağnak Yılmaz
+            // Fatma Zeynep Özen
+            // Özge BAŞARAN AYDOĞDU
+            // Rabia Demirtaş
+            // Ufkay Karabay
+            // Gökçe Hande Çavuş
+            // Emel Tekin
+            // Yasemin Akca
+            // Tülay Koç
+            // Ezgi Dicle Serbes
+            // Deniz BAYÇELEBİ
+            
             { name: "Volkan Adsay", institution: "Koç University", citations: 57196 },
             { name: "Ayşe Ayhan", institution: "Hacettepe Üniversitesi", citations: 9392 },
             { name: "Alp Usubütün", institution: "Hacettepe Üniversitesi", citations: 7785 },
