--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
             { name: "Tülin Yalta", institution: "Trakya Üniversitesi Patoloji", citations: 947 },
             { name: "Mehtat Ünlü", institution: "Dokuz Eylul University", citations: 917 },
             { name: "Kayhan Başak", institution: "Sağlık Bilimleri Üniversitesi, Kartal Dr. Lütfi Kırdar Şehir Hastanesi", citations: 922 },
-            { name: "Yurdanur Sullu", institution: "Ondokuz Mayıs Üniversitesi Tıp Fakültesi Patoloji", citations: 919 },
+            { name: "Yurdanur Süllü", institution: "Ondokuz Mayıs Üniversitesi Tıp Fakültesi Patoloji", citations: 919 },
             { name: "Mehmet Yaldız", institution: "Mersin Üniversitesi Tıp Fakültesi", citations: 911 },
             { name: "Sergülen Dervişoğlu", institution: "Medipol University", citations: 843 },
             { name: "Gökhan Artaş", institution: "Fırat Üniversitesi Tıp Fakültesi, Patoloji", citations: 847 },
@@ -367,7 +367,7 @@
             { name: "Yasemen Adalı Ruşen", institution: "İzmir Demokrasi Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 463 },
             { name: "Anıl Aysal", institution: "Dokuz Eylül Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 454 },
             { name: "Pınar Celepli", institution: "Sağlık Bakanlığı Gülhane Eğitim ve Araştırma Hastanesi", citations: 448 },
-            { name: "Gulname Fındık Güvendi", institution: "Recep Tayyip Erdoğan Üniversitesi Tıp Fakültesi Patoloji", citations: 445 },
+            { name: "Gülname Fındık Güvendi", institution: "Recep Tayyip Erdoğan Üniversitesi Tıp Fakültesi Patoloji", citations: 445 },
             { name: "Pelin Yıldız", institution: "Acıbadem Üniversitesi, Patoloji Bölümü", citations: 443 },
             { name: "Emel Çakır", institution: "Karadeniz Teknik Üniversitesi Tıp Fakültesi Patoloji", citations: 441 },
             { name: "Servet Güreşçi", institution: "Ankara Bilkent Şehir Hastanesi", citations: 435 },
