--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
             { name: "Recep Bedir", institution: "Recep Tayyip Erdoğan Üniversitesi, Tıp Fakültesi Tıbbi Patoloji", citations: 816 },
             { name: "Sare Şipal", institution: "Atatürk Üniversitesi Tıp Fakültesi Patoloji", citations: 782 },
             { name: "Banu Yaman", institution: "Ege University", citations: 777 },
-            { name: "Şirin Başpınar", institution: "Süleyman Demirel Üniversitesi Tıp Fakültesi, Tıbbi Patoloji", citations: 750 },
+            { name: "Şirin Başpınar", institution: "Tıbbi Patoloji", citations: 750 },
             { name: "Sıdıka Fındık", institution: "Necmettin Erbakan Üniversitesi Meram Tıp Fakültesi Tıbbi Patoloji", citations: 744 },
             { name: "Armağan Günal", institution: "Sağlık Bilimleri Üniversitesi Tıbbi Patoloji", citations: 731 },
             { name: "Ersin Tuncer", institution: "Sivas Cumhuriyet Üniversitesi Tıp Fakültesi", citations: 667 },
