--- a/index.html
+++ b/index.html
@@ -197,7 +197,10 @@
         { name: "Tülay Koç", institution: "Cumhuriyet University", citations: 31 },
         { name: "Ezgi Dicle Serbes", institution: "Ankara University", citations: 30 },
         { name: "Deniz Bayçelebi", institution: "Ondokuz Mayıs University Faculty of Medicine", citations: 25 }
+        // 👉 Yeni eklemek istediğiniz hocayı buraya yazın:
+        // { name: "Ad Soyad", institution: "Üniversite", citations: 1234 },
     ];
+
 
     // Atıf sayısına göre büyükten küçüğe sıralama
     data.sort((a, b) => b.citations - a.citations);
